Los años se muestran sin separador de miles

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -1,5 +1,8 @@
 
 [placeholder]:empty::before 
-    content attr(placeholder)
-    color #7bF
+  content attr(placeholder)
+  color #7bF
 
+[my-colname=annio]
+  .number-separator
+    display none
