Primer despliegue diseñable

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -6,3 +6,9 @@
 [my-colname=annio]
   .number-separator
     display none
+
+div.fp-fieldname-cuil
+  width 12em
+
+.MuiAutocomplete-root  
+  display inline-flex
