Muestra los días de semana para marcar si es un código programado con c_dds

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -10,5 +10,11 @@
 div.fp-fieldname-cuil
   width 12em
 
+div.fp-fieldname-cod_novedades__novedad
+  width 40em
+
+label.fp-fieldname-dds1
+  margin-left 2em
+
 .MuiAutocomplete-root  
   display inline-flex
