Agrego un calendario

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -18,3 +18,37 @@ label.fp-fieldname-dds1
 
 .MuiAutocomplete-root  
   display inline-flex
+
+div.calendario-mes
+  margin 2em
+
+div.calendario-semana
+  display flex
+  flex-direction row
+
+div.calendario-dia, div.calendario-nombre-dia
+  display flex
+  flex-direction column
+  width 4em
+  height 4em
+  border-bottom 0.5px dotted gray
+  border-right 0.5px dotted gray
+  padding 2px
+
+div.calendario-nombre-dia
+  align-content center
+  align-self center
+
+span.calendario-dia-numero
+  font-size 80%
+
+span.calendario-dia-contenido
+  font-size 120%
+  margin-top 0.5em
+  align-self center
+
+div.tipo-dia-no-laborable
+  background-color #ECC
+
+div.tipo-dia-no-trabaja
+  background-color #ED9
