--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -52,3 +52,23 @@ div.tipo-dia-no-laborable
 
 div.tipo-dia-no-trabaja
   background-color #ED9
+
+div.calendario-dia-seleccionado
+  background-color #ffcc00
+
+.appbar
+  width 60px !important
+  height 100vh !important
+  left 0 !important
+  top 0 !important
+  flex-direction column !important
+  justify-content flex-start !important
+  align-items center !important
+
+.toolbar
+  display flex !important
+  flex-direction column !important
+  align-items center !important
+  padding-top 16px !important
+  padding-bottom 16px !important
+  height 100% !important
