Cambio de nombre de la tabla personal y su pk

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -7,7 +7,7 @@
   .number-separator
     display none
 
-div.fp-fieldname-cuil
+div.fp-fieldname-idper
   width 12em
 
 div.fp-fieldname-cod_novedades__novedad
