separo apellido y nombre, calculo el idper automáticamente.

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -7,6 +7,9 @@
   .number-separator
     display none
 
+.my-grid td[my-colname*=nombre_sector]
+  max-width 40em
+
 div.fp-fieldname-idper
   width 12em
 
@@ -72,3 +75,4 @@ div.calendario-dia-seleccionado
   padding-top 16px !important
   padding-bottom 16px !important
   height 100% !important
+
