--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -59,6 +59,68 @@ div.tipo-dia-no-trabaja
 div.calendario-dia-seleccionado
   background-color #ffcc00
 
+.calendario-extendido-mes
+  margin 2em
+  padding 1em
+
+.calendario-extendido-grid
+  display grid
+  grid-template-columns repeat(7, 1fr)
+  gap 0.5px
+
+.calendario-extendido-header
+  display grid
+  grid-template-columns repeat(7, 1fr)
+  text-align center
+  background-color #f5f5f5
+  font-weight bold
+  padding 0.5em
+
+.calendario-extendido-semana
+  display contents
+
+.calendario-extendido-dia, .calendario-extendido-nombre-dia
+  display flex
+  flex-direction column
+  justify-content space-between
+  border 1px solid #e0e0e0
+  width 100%
+  height 100px
+  padding 4px
+  background-color #fff
+  transition background-color 0.3s ease
+  cursor pointer
+
+.calendario-extendido-dia:hover
+  background-color #f0f0f0
+
+.calendario-extendido-dia-seleccionado
+  background-color #ffcc00
+  border-color #ffa500
+
+.calendario-extendido-dia-numero
+  font-size 80%
+  align-self flex-start
+
+.calendario-extendido-dia-contenido
+  font-size 120%
+  margin-top 0.5em
+  align-self center
+
+.tipo-dia-no-laborable
+  background-color #ecc
+
+.tipo-dia-no-trabaja
+  background-color #ed9
+
+@media (max-width: 600px)
+  .calendario-extendido-dia
+    height 60px
+
+.calendario-extendido-dia-numero, .calendario-extendido-dia-contenido
+  font-size 70%
+
+
 .appbar
   width 60px !important
   height 100vh !important
