--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -41,6 +41,8 @@ div.calendario-dia, div.calendario-nombre-dia
 div.calendario-nombre-dia
   align-content center
   align-self center
+  height 1em
+  text-align center
 
 span.calendario-dia-numero
   font-size 80%
