Agrego margen en los sectores que dependen de otros (por nivel)

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -140,3 +140,6 @@ div.calendario-dia-seleccionado
   padding-bottom 16px !important
   height 100% !important
 
+span.box-id
+  font-size 90%
+  font-weight bold
