Junto los componente de info persona

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -144,5 +144,21 @@ span.box-id
   font-size 90%
   font-weight bold
 
-error-valor
-  background-color: #FAA
+.error-valor
+  background-color #FAA
+
+.componente-horario
+  min-width 24em
+
+.componente-calendario-mes
+  min-width 32em  
+
+.componente-novedades-registradas
+  min-width 28em  
+
+.componente-persona
+  & > *
+    margin 2em
+  display flex
+  flex-wrap wrap
+  align-content space-between
