--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -150,11 +150,17 @@ span.box-id
 .componente-horario
   min-width 24em
 
+.componente-datos-personales
+  min-width 24em
+
 .componente-calendario-mes
   min-width 32em  
 
 .componente-novedades-registradas
   min-width 28em  
+
+.componente-lista-personas
+  min-width 500px
 
 .componente-persona
   & > *
