Agrego los códigos de novedad a la derecha.

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -146,6 +146,7 @@ div.calendario-dia-seleccionado, div.seleccionado
 span.box-id
   font-size 90%
   font-weight bold
+  min-width 3.5em
 
 .error-valor
   background-color #FAA
@@ -169,11 +170,12 @@ span.box-id
   & > *
     margin 2em
   display flex
+  flex-direction column
   flex-wrap wrap
   align-content space-between
 
 .componente-pantalla-1
   display flex
 
-.persona-id
-  min-width 3.5em
+.componente-codigo-novedades
+  min-width 24em
