agrego procedimiento para el origen del selector de novedaes

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -179,3 +179,8 @@ span.box-id
 
 .componente-codigo-novedades
   min-width 24em
+
+.deshabilitado {
+    opacity: 0.5;
+    pointer-events: none;
+}
