Agrego un lugar donde registrar los errores del backend (logErrors).
Mejoro las listas laterales

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -130,6 +130,14 @@ span.box-id
   font-weight bold
   min-width 3.5em
 
+span.box-names
+  flex-grow 2
+
+span.box-info
+  font-size 90%
+  font-weight bold
+  min-width 3.5em
+
 .error-valor
   background-color #FAA
 
