Pantalla 1 conoce todos los datos de la persona seleccionada (no solo el idper)

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -125,6 +125,10 @@ div.calendario-dia-seleccionado, div.seleccionado
 .calendario-extendido-dia-numero, .calendario-extendido-dia-contenido
   font-size 70%
 
+div.box-line
+  display flex
+  flex-direction row
+
 span.box-id
   font-size 90%
   font-weight bold
