cambio la forma de visualizar la semana actual en horario

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -174,7 +174,21 @@ span.box-info
 .componente-codigo-novedades
   min-width 24em
 
-.deshabilitado {
-    opacity: 0.5;
-    pointer-events: none;
-}
+.deshabilitado
+  opacity: 0.5
+  pointer-events: none
+
+.horario-vigente
+    text-align: center
+    font-weight: bold
+    margin-bottom: 1em
+
+.horario-contenedor
+    display: flex
+    justify-content: space-around
+    align-items: flex-start
+
+.horario-dia
+    font-weight: bold
+    margin-bottom: 0.5em
+
