agrego visor de fichadas

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -175,20 +175,21 @@ span.box-info
   min-width 24em
 
 .deshabilitado
-  opacity: 0.5
-  pointer-events: none
+  opacity 0.5
+  pointer-events none
 
 .horario-vigente
-    text-align: center
-    font-weight: bold
-    margin-bottom: 1em
+  text-align center
+  font-weight bold
+  margin-bottom 1em
 
 .horario-contenedor
-    display: flex
-    justify-content: space-around
-    align-items: flex-start
+  display flex
+  justify-content space-around
+  align-items flex-start
 
 .horario-dia
-    font-weight: bold
-    margin-bottom: 0.5em
+  font-weight bold
+  margin-bottom 0.5em
+
 
