--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -47,14 +47,16 @@ div.calendario-mes
 div.calendario-semana
   display flex
   flex-direction row
+  justify-content center
 
 div.calendario-dia, div.calendario-nombre-dia
   display flex
   flex-direction column
   width 4em
   height 4em
-  border-bottom 0.5px solid #b1b4c4
-  border-right 0.5px solid #b1b4c4
+  border-bottom 0.5px solid #e0e0e4
+  border-right 0.5px solid #e0e0e4
+  border-left 0.5px solid #e0e0e4
   padding 2px
 
 div.calendario-nombre-dia
@@ -74,7 +76,7 @@ span.calendario-dia-contenido
   align-self center
 
 div.tipo-dia-no-laborable
-  background-color #ECC
+  background-color #f5f5f5
 
 div.tipo-dia-no-trabaja
   background-color #ED9
