pantalla persona - datos personales + horario

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -23,6 +23,10 @@ span.mdi
   font-size 1.2rem
   margin 0 0 20px 0
 
+.titulo-componente-descripcion
+  margin-bottom 0px
+  color #ffff
+
 .my-grid td[my-colname*=nombre_sector]
   max-width 40em
 
@@ -208,8 +212,6 @@ span.box-names
   pointer-events: none
 
 .horario-vigente
-    text-align: center
-    font-weight: bold
     margin-bottom: 1em
 
 .horario-contenedor
@@ -229,5 +231,3 @@ span.box-names
   min-width 30px 
   margin-right 10px
   font-weight bold
-  
-   
