--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -58,6 +58,9 @@ div.tipo-dia-no-laborable
 div.tipo-dia-no-trabaja
   background-color #ED9
 
+div.tipo-dia-trabajable
+  background-color rgb(62, 249, 0)
+
 div.calendario-dia-seleccionado, div.seleccionado
   &:hover
     background-color #eee488
