paso a un procedimiento descanso anual remunerado, agrego columna de dias tomados

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -58,7 +58,7 @@ div.tipo-dia-no-laborable
 div.tipo-dia-no-trabaja
   background-color #ED9
 
-div.tipo-dia-trabajable
+div.tipo-dia-trabaja
   background-color rgb(62, 249, 0)
 
 div.calendario-dia-seleccionado, div.seleccionado
