Extraigo las modalidades de las capacitaciones.

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -211,3 +211,6 @@ span.box-info
 div.horario-renglon
   display flex
   flex-direction row
+
+.my-grid td[my-colname=capacitacion]
+  max-width 50em
