Separo la estética del día laborable (fondo) del día trabajado (letra). Griso las personas a las que no se les puede cargar novedades. Agrego el botón HOY en el calendario

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -195,6 +195,7 @@ span.box-info
   border-bottom 0.5px dotted gray
   border-right 0.5px dotted gray
   padding 2px
+  text-align center
 
 .search-box
   padding-left 0.7em
@@ -214,3 +215,37 @@ div.horario-renglon
 
 .my-grid td[my-colname=capacitacion]
   max-width 50em
+
+.con_novedad_si
+  color #620
+  font-weight bold
+
+.con_novedad_no
+  color #040
+  font-style italic
+
+selector-normal()
+  margin 3px
+  div
+    padding-top 7px
+    padding-bottom 7px
+
+div.selector-mes
+  width 8em
+  selector-normal()
+
+div.selector-annio
+  selector-normal()
+
+boton-normal()
+  margin 3px
+
+button.es-hoy-si
+  boton-normal()
+  font-weight bold
+
+button.es-hoy-no
+  boton-normal()
+
+div.no-seleccionable
+  color #666
