Registro de novedades con confirmación final.

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -207,7 +207,8 @@ span.box-info
   gap 2em  
 
 .novedades-detalles
-  width 100%  
+  width 100%
+  max-width 32em
 
 div.horario-renglon
   display flex
@@ -249,3 +250,6 @@ button.es-hoy-no
 
 div.no-seleccionable
   color #666
+
+button.boton-confirmar-registro-novedades
+  max-width 32em  
