RRHH ve toda la lista de personas. Quito la tabla descanso_anual_remunerado que es nov_per. Agrego a nov_per lo que le faltaba para servir a ambos propósitos.

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -257,6 +257,7 @@ button.boton-confirmar-registro-novedades
 div.novedades-renglon
   display flex
   flex-direction row
+  justify-content space-between
   min-height 2em
   align-items center
   &:hover
