--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -238,6 +238,12 @@ span.box-names
   
 .search-box
   padding-left 0.7em
+  border 1px solid #A4A4A5
+  padding 3px 5px
+  border-radius 10px
+  box-sizing border-box
+  margin-bottom 15px
+
 
 .componente-del-medio
   min-width 470px
