arreglos en ultimo merge pantalla-1

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -200,6 +200,8 @@ span.box-names
   gap 2%
   margin-left auto
   margin-right auto
+  padding 3%
+  box-sizing border-box
   @media (max-width: 960px)
       grid-template-columns: repeat(2, 1fr)
   @media (max-width: 600px)
@@ -297,7 +299,9 @@ div.no-seleccionable
   color #666
 
 button.boton-confirmar-registro-novedades
-  max-width 32em  
+  background-color #252663
+  margin 20px 0
+
 
 div.novedades-renglon
   display flex
