unifico datos relacionados al perfil de persona - CUIL, FICHA y Horario vigente

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -11,6 +11,10 @@ $font-primary = 'Montserrat', sans-serif
   .number-separator
     display none
 
+div.row-styl
+  display flex
+  flex-direction row     
+
 span.mdi 
   font-size 1.4rem
   margin-right 10px
@@ -44,6 +48,12 @@ label.fp-fieldname-dds1
 
 .MuiAutocomplete-root  
   display inline-flex
+
+.box-selectores
+  padding 15px 0
+  display flex
+  justify-content space-between
+  box-sizing border-box
 
 .selectores
   margin-right 10px  
@@ -163,6 +173,7 @@ span.box-id
   font-weight bold
   margin-right: 12px
   color #252663
+  align-self center
 
 span.box-names
   font-weight bold
@@ -218,8 +229,8 @@ span.box-names
   pointer-events none
 
 .horario-vigente
-  text-align center
   margin-bottom 1em
+  color #8b8fa3
 
 .horario-contenedor
   display flex
@@ -336,3 +347,11 @@ div.novedades-renglon
   min-width 30px 
   margin-right 10px
   font-weight bold
+
+.circulo-num
+  box-sizing border-box
+  padding-right 5px
+  min-width 35px
+  font-size 0.8rem
+  font-weight bold
+  color #A5ACCD
