Vuelvo a que todos los códigos de novedad están en novedades. Agrego el concepto de prioridad

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -217,11 +217,11 @@ div.horario-renglon
 .my-grid td[my-colname=capacitacion]
   max-width 50em
 
-.con_novedad_si
+.prioridad_no
   color #620
   font-weight bold
 
-.con_novedad_no
+.prioridad_si
   color #040
   font-style italic
 
