--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -279,3 +279,18 @@ div.novedades-renglon
 .por-borrar
   text-decoration line-through
   color #800    
+
+.dia-programado-checkbox-container
+  display: flex
+  align-items: center
+  padding: 0.5rem 0
+  flex-wrap: nowrap
+  justify-content: space-between
+
+.dia-programado-checkbox-label
+  display: flex
+  align-items: center
+  font-size: 0.9rem
+
+.dia-programado-checkbox-separator
+  color: gray
