No cargo ddsN cuando c_dds no es true

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -269,7 +269,7 @@ div.novedades-renglon
     width 3em
     text-align center
   .razones
-    flex-grow 2
+    flex 3 3
   .borrar
     button
       min-width 1em
