solucion a 4to scroll

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -11,6 +11,7 @@
   height 100vh
   display flex
   flex-direction column
+  overflow-y hidden
 
 .my-grid td[my-colname*=nombre_sector]
   max-width 40em
