Mejoro la visualización de las ventanas emergentes (ej: confirmar borrar novedad futura)

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -315,3 +315,8 @@ div.novedades-renglon
 
 .dia-programado-checkbox-separator
   color: gray
+
+div[role=dialog]
+  padding 1em
+  button
+    margin 1em
