--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -1,4 +1,3 @@
-
 [placeholder]:empty::before 
   content attr(placeholder)
   color #7bF
@@ -355,3 +354,23 @@ div[role=dialog]
 
 [siper-esEfimero=si]
   opacity 0.5
+
+[hoy-signo-de]
+  visibility hidden
+  padding-left 0.2em
+  padding-right 0.2em
+[es-este-mes="no-futuro"]
+  [hoy-signo-de="futuro"]
+    visibility visible
+[es-este-mes="no-pasado"]
+  [hoy-signo-de="pasado"]
+    visibility visible
+button[es-este-mes]
+  padding-left 0.3em
+  padding-right 0.3em
+  margin 0.3em
+  border 0.5px solid #ccc
+  color #444
+  &:hover
+    border 0.5px solid #444
+    color black
