Filtro para que se vean los usandos aunque no sean prioritarios

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -374,3 +374,20 @@ button[es-este-mes]
   &:hover
     border 0.5px solid #444
     color black
+
+.box-info
+  text-align center
+  [con-info-nov]
+    display inline-block
+    font-weight normal
+    font-size 90%
+    border 0.5px transparent transparent
+    padding-left 2px
+    padding-right 2px
+  [con-info-nov=usados]
+    border 0.5px dashed #ccc
+    min-width 1em
+  [con-info-nov=pendientes]
+    border 0.5px dashed #ccc
+    min-width 1em
+  
