Almanaque. Color de fonde días no laborables. Gris

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -58,7 +58,7 @@ span.calendario-dia-contenido
   align-self center
 
 div.tipo-dia-no-laborable
-  background-color #ECC
+  background-color #dfdddd
 
 div.tipo-dia-no-trabaja
   background-color #ED9
@@ -121,7 +121,7 @@ div.calendario-dia-seleccionado, div.seleccionado
   align-self center
 
 .tipo-dia-no-laborable
-  background-color #ecc
+  background-color #dfdddd
 
 .tipo-dia-no-trabaja
   background-color #ed9
