--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -427,3 +427,7 @@ button[es-este-mes]
 @media print 
   .menu-item
     display none
+
+[my-table^=parte-diario-grid]
+    [my-colname=fecha]
+      display table-cell
