--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -259,6 +259,55 @@ span.box-info
   border-right 0.5px dotted gray
   padding 2px
 
+.componente-inconsistencias-persona
+  min-width 28em
+
+.inconsistencias-titulo-principal
+  text-align center
+  margin-bottom 1em
+  width 100%
+
+.inconsistencias-contenedor
+  display flex
+  align-items flex-start
+  flex-direction column
+  width 100%
+
+.inconsistencias-renglon
+  display flex
+  flex-direction row
+  font-size 0.8em
+  font-weight bold
+  width 100%
+  min-height 2em
+
+.inconsistencias-celda
+  display flex
+  flex-direction column
+  flex 1
+  font-weight normal
+  font-size 1em
+  border-bottom 0.5px dotted gray
+  border-right 0.5px dotted gray
+  padding 4px
+  text-align center
+  align-items center
+  justify-content center
+  overflow hidden
+  text-overflow ellipsis
+
+.inconsistencias-titulo
+  display flex
+  flex-direction column
+  flex 1
+  height 1.5em
+  border-bottom 0.5px dotted gray
+  border-right 0.5px dotted gray
+  padding 4px
+  text-align center
+  align-items center
+  justify-content center
+
 .search-box
   padding-left 0.7em
   display flex
