--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -427,3 +427,57 @@ button[es-este-mes]
 @media print 
   .menu-item
     display none
+
+.componente-grilla-generica
+  min-width 28em
+
+.grilla-titulo-principal
+  text-align center
+  margin-bottom 1em
+  width 100%
+  font-weight bold
+
+.grilla-renglon
+  display flex
+  flex-direction row
+  font-size 0.8em
+  font-weight bold
+  width 100%
+  min-height 2em
+  &:hover
+    background-color #f0f0f0
+
+.grilla-celda
+  display flex
+  flex-direction column
+  flex 1
+  font-weight normal
+  font-size 1em
+  border-bottom 0.5px dotted gray
+  border-right 0.5px dotted gray
+  padding 4px
+  text-align center
+  align-items center
+  justify-content center
+  overflow hidden
+  text-overflow ellipsis
+
+.grilla-celda-vacia
+  flex 1
+  padding 4px
+  text-align center
+  font-style italic
+  color #666
+
+.grilla-titulo
+  display flex
+  flex-direction column
+  flex 1
+  height 1.5em
+  border-bottom 0.5px dotted gray
+  border-right 0.5px dotted gray
+  padding 4px
+  text-align center
+  align-items center
+  justify-content center
+  background-color #f8f8f8
