contenedor para datos del legajo en la pantalla principal

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -202,6 +202,47 @@ span.box-info
   min-width 24em
   bottom 0px
 
+.componente-legajo-per
+  min-width 28em
+  margin-bottom 1em
+
+.legajo-contenedor
+  display flex
+  flex-direction column
+  gap 0.8em
+  padding 0.5em
+
+.legajo-seccion
+  border-left 3px solid #e0e0e0
+  padding-left 0.6em
+
+.legajo-seccion-titulo
+  font-weight bold
+  color #444
+  margin-bottom 0.3em
+
+.legajo-grupo
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  gap 0.5em 1em
+  margin-bottom 0.5em
+
+.legajo-campo
+  display flex
+  flex-direction row
+  align-items center
+  min-width 12em
+
+.legajo-campo-largo
+  flex-basis 100%
+
+.legajo-etiqueta
+  font-weight bold
+  color #666
+  margin-right 0.5em
+  min-width 5em
+
 .deshabilitado
   opacity 0.5
   pointer-events none
