acomodo la visualización de los pendientes

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -447,11 +447,13 @@ button[es-este-mes]
 
 .box-info
   text-align center
+  &[con-info-nov=si]
+    display flex
   [con-info-nov]
     display inline-block
     font-weight normal
     font-size 90%
-    border 0.5px transparent transparent
+    border 0.5px dashed transparent
     padding-left 2px
     padding-right 2px
   [con-info-nov=usados]
