al seleccionar días que se noten los no laborables

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -80,6 +80,8 @@ div.calendario-dia-seleccionado, div.seleccionado
     background-color #eee488
   background-color #fff4aa
   font-weight bold
+  &.tipo-dia-no-laborable
+    background-color #ccc488
 
 .calendario-extendido-mes
   margin 2em
