muestro rojo cuil invalido y agrego a incosistencias

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -160,6 +160,12 @@ span.box-id
 span.box-names
   flex-grow 2
 
+span.box-names[red-color=si], 
+td[red-color=si],
+.legajo-valor[red-color=si]
+  color #FF0000
+  font-weight bold
+
 span.box-info
   font-size 90%
   font-weight bold
