--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -16,6 +16,13 @@
 .accordion-bg
   background-size auto 100%
 
+.link-manual
+  color inherit
+  text-decoration none
+  flex-direction row
+  display flex
+  gap 5px
+
 .accordion-summary
   flex-direction row-reverse
   & .MuiAccordionSummary-content
