Slider en árbol

--- a/src/client/css/arbol.styl
+++ b/src/client/css/arbol.styl
@@ -1,7 +1,14 @@
-.marco-arbol
+div.marco-arbol
+  width 100vw
+  height 100vh
+  overflow scroll
   table
     border-collapse collapse
     border-spacing 0
+
+.arbol-barra-titulo
+  display flex
+  justify-content space-between
 
 .arbol-nodo
   display block
@@ -90,4 +97,4 @@ td
 
 .arbol-sector
   font-size 85%
-  margin-bottom 2px  
+  margin-bottom 2px
