Filtro la tabla de personas según el usuario. Mejoro el slider del árbol.

--- a/src/client/css/arbol.styl
+++ b/src/client/css/arbol.styl
@@ -2,6 +2,7 @@ div.marco-arbol
   width 100vw
   height 100vh
   overflow scroll
+  user-select none
   table
     border-collapse collapse
     border-spacing 0
