boton lupa posiciona cursor, boton borrado aparece cuando hay texto a buscar

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -386,6 +386,9 @@ button.boton-confirmar-registro-novedades
 .siper-button[boton-negro = si]
   color #000
 
+.siper-button[es-visible = no]
+  visibility hidden
+
 div.novedades-renglon
   display flex
   flex-direction row
