Fix: al agregar varias direcciones se agranda el cuadro central en pantalla principal

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -243,6 +243,10 @@ span.box-info
   gap 0.5em 1em
   margin-bottom 0.5em
 
+.legajo-grupo-domicilios,
+.legajo-grupo-telefonos
+  flex-direction column
+
 .legajo-campo
   display flex
   flex-direction row
