Cambios en la usabilidad del calendario.

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -144,6 +144,9 @@ div.calendario-dia-seleccionado, div.seleccionado
 .tipo-dia-no-trabaja
   background-color #ed9
 
+[es-otro-mes="si"]
+  opacity 0.3
+
 .calendario-extendido-dia-numero, .calendario-extendido-dia-contenido
   font-size 70%
 
