al borrar novedades registradas, tacha la que corresponde y el modal de borrado detallado

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -40,6 +40,18 @@ div.fp-fieldname-cod_novedades__novedad
 label.fp-fieldname-dds1
   margin-left 2em
 
+.modal-borrar-novedad
+  display flex
+  flex-direction column
+  align-items center
+  justify-content center
+  text-align center
+  padding 1em 2em 0em 2em
+  line-height 1.6
+
+.modal-borrar-novedad > div
+  margin-top 10px
+
 .MuiAutocomplete-root  
   display inline-flex
 
