alineo los saldos y agrego ü a antigüedad

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -499,6 +499,9 @@ button[es-este-mes]
   [con-info-nov=pendientes]
     border 0.5px dashed #ccc
     min-width 1em
+  [con-info-nov=saldo] 
+    min-width 1em
+      
   
 .check-box[sin-padding=si]
   color #000
