adapto la ficha de personas

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -516,3 +516,13 @@ button[es-este-mes]
 [tiene-problemas=si]
   color #f00
   font-weight bold
+
+.ficha-personas
+  .fp-fieldname-idper
+    width 70px
+  .fp-fieldname-cuil
+    width 130px
+  .fp-fieldname-tipo_doc
+    width 70px
+  .fp-fieldname-documento
+    width 100px
