Caso de prueba para la grillita de vacaciones

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -304,6 +304,16 @@ span.box-info
   align-items flex-start
   flex-direction column
 
+.vacaciones-error
+  &::before
+    content 'ERROR: '
+  color: #D00
+  display flex
+  font-size 0.8em
+  font-weight bold
+  flex-direction row
+  text-align left
+
 .vacaciones-renglon
   display flex
   font-size 0.8em
