se reducen los warnings en la consola del navegador

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -463,12 +463,12 @@ div[role=dialog]
   button
     margin 1em
 
-[siper-esEfimero=si]
+[siper-es-efimero=si]
   opacity 0.5
 
-.componente-lista-personas[siper-esScrollable=si]
-.componente-codigo-novedades[siper-esScrollable=si]
-.componente-del-medio[siper-esScrollable=si]
+.componente-lista-personas[siper-es-scrollable=si]
+.componente-codigo-novedades[siper-es-scrollable=si]
+.componente-del-medio[siper-es-scrollable=si]
   overflow-y auto
 
 [hoy-signo-de]
