primera version, no anda desde cron por tema de permisos

--- a/src/client/css/menu.styl
+++ b/src/client/css/menu.styl
@@ -536,3 +536,9 @@ button[es-este-mes]
     width 70px
   .fp-fieldname-documento
     width 100px
+
+.svg-acciones
+  height 1.5em
+  width 1.5em
+  margin-left 2px
+  vertical-align bottom
